# mospolytech-database-coursework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
controllers/: authcontroller.cpp  authcontroller.h  ordercontroller.h
controllers/admin/: admincontroller.cpp  admincontroller.h  adminmodel.cpp  adminmodel.h
controllers/auth/: authcontroller.cpp  authcontroller.h
controllers/main/: maincontroller.cpp  maincontroller.h
controllers/manager/: managercontroller.cpp  managercontroller.h
models/: authmodel.cpp  authmodel.h  databasemanager.cpp  databasemanager.h
models/admin/: adminmodel.cpp  adminmodel.h  adminuser.h  role.h
models/auth/: authmodel.cpp  authmodel.h  user.h
models/main/: customer.h  deliverymethod.h  deliveryoption.h  mainmodel.cpp  mainmodel.h  order.h  orderitem.h  product.h
models/manager/: managermodel.cpp  managermodel.h
views/admin/: adminwindow.cpp  adminwindow.h  adminwindow.ui  createuserdialog.cpp  createuserdialog.h  createuserdialog.ui  deleteuserdialog.cpp  deleteuserdialog.h  deleteuserdialog.ui
views/auth/: authwindow.cpp  authwindow.h  authwindow.ui  changedatadialog.cpp  changedatadialog.h  changedatadialog.ui  customerinfodialog.cpp  customerinfodialog.h  customerinfodialog.ui  regwindow.cpp  regwindow.h  regwindow.ui
views/main/: mainwindow.cpp  mainwindow.h  mainwindow.ui  orderhistorydialog.cpp  orderhistorydialog.h  orderhistorydialog.ui  orderwindow.cpp  orderwindow.h  orderwindow.ui
views/manager/: managerwindow.cpp  managerwindow.h  managerwindow.ui
